cmake_minimum_required(VERSION 3.0.2)
project(simple_navigation_goals)

find_package(catkin REQUIRED COMPONENTS
  actionlib
  move_base_msgs
  roscpp
  std_srvs
)

catkin_package(
  CATKIN_DEPENDS actionlib move_base_msgs std_srvs roscpp
)

include_directories(
  ${catkin_INCLUDE_DIRS}
)

add_executable(simple_navigation_goals src/simple_navigation_goals.cpp)
target_link_libraries(simple_navigation_goals ${catkin_LIBRARIES})